--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,9 @@
 <web-app>
     <display-name>PreExperiment Data Collector</display-name>
     <distributable/>
+    <listener>
+        <listener-class>hzg.wpn.hdri.web.predator.ApplicationLoader</listener-class>
+    </listener>
     <servlet>
         <servlet-name>ApplicationServlet</servlet-name>
         <display-name>ApplicationServlet</display-name>
