--- a/src/main/webapp/WEB-INF/application.properties
+++ b/src/main/webapp/WEB-INF/application.properties
@@ -28,7 +28,7 @@
 #
 
 beamtime.id = test-beamtime
-data.storage.class = wpn.hdri.web.storage.SimpleSerializationStorage
+data.storage.class = hzg.wpn.hdri.predator.storage.SimpleSerializationStorage
 # matches to Tango Server Name
 tango.server.class = PreExperimentDataCollector
 # matches to Tango Instance Name
