--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
         </dependency>
         <!-- delete obsolete commons dependency: collection etc -->
         <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>11.0.2</version>
