--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -153,6 +153,10 @@
         <description>The owner of the login/password pair.</description>
         <role-name>user</role-name>
     </security-role>
+    <security-role>
+        <description>Administrator</description>
+        <role-name>admin</role-name>
+    </security-role>
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
