--- a/src/main/webapp/WEB-INF/classes/application.properties
+++ b/src/main/webapp/WEB-INF/classes/application.properties
@@ -34,3 +34,4 @@ tango.server.class = PreExperimentDataCollector
 tango.server.name  = development
 #tango start up coma separated arguments, i.e. -nodb,...
 tango.server.arguments =
+storage.root =
