--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>hzg.wpn</groupId>
+    <groupId>de.hzg.wpi.xenv</groupId>
     <artifactId>PreExperimentDataCollector</artifactId>
     <description>This project is dedicated to implement web interface. This web interface is used by the experiment
         users. Prior the experiment the users have to fill out the form. In this form there are several fields that
@@ -55,18 +55,6 @@
         <tag>HEAD</tag>
     </scm>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>de.hzg.wpi.tango</groupId>
-                <artifactId>tango-server-bom</artifactId>
-                <version>25</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
@@ -86,6 +74,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -144,6 +133,7 @@
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
+            <version>1.28</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -153,6 +143,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -176,22 +167,24 @@
             <version>${slf4j-api.version}</version>
         </dependency>
         <dependency>
-            <groupId>hzg.wpn</groupId>
+            <groupId>de.hereon</groupId>
             <artifactId>utils</artifactId>
+            <version>22</version>
         </dependency>
         <dependency>
-            <groupId>org.tango-controls</groupId>
-            <artifactId>JTangoServer</artifactId>
+            <groupId>de.hereon.tango</groupId>
+            <artifactId>server</artifactId>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
-            <groupId>org.bitbucket.ingvord</groupId>
-            <artifactId>jmvc-backend</artifactId>
-            <version>0.0.3</version>
+            <groupId>ru.ingvord</groupId>
+            <artifactId>jmvc</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>de.hzg.wpi.utils</groupId>
+            <groupId>de.hereon.utils</groupId>
             <artifactId>authorization</artifactId>
-            <version>RELEASE</version>
+            <version>1.3</version>
         </dependency>
         <dependency>
             <groupId>javax.ws.rs</groupId>
@@ -205,9 +198,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -421,15 +414,12 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-            <id>bintray-hzg</id>
-            <url>http://dl.bintray.com/hzgde/hzg-wpn-projects</url>
+            <id>github-hzg</id>
+            <url>https://maven.pkg.github.com/hzg-wpi/*</url>
         </repository>
         <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-ingvord</id>
-            <url>http://dl.bintray.com/ingvord/maven</url>
+            <id>lib</id>
+            <url>file://${project.basedir}/lib</url>
         </repository>
     </repositories>
 </project>
