[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         users. Prior the experiment the users have to fill out the form. In this form there are several fields that
         describes the ongoing experiment (samples, purposes etc.)
     </description>
-    <version>4.0.20</version>
+    <version>4.0.21-SNAPSHOT</version>
 
     <packaging>war</packaging>
 
@@ -52,7 +52,7 @@
         <connection>scm:git:git@github.com:${github.organization}/${github.repo}.git</connection>
         <developerConnection>scm:git:git@github.com:${github.organization}/${github.repo}.git</developerConnection>
         <url>https://github.com/${github.organization}/${github.repo}</url>
-        <tag>PreExperimentDataCollector-4.0.20</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
