Update GitHub maven repo URL

--- a/pom.xml
+++ b/pom.xml
@@ -467,7 +467,7 @@
                 <enabled>false</enabled>
             </snapshots>
             <id>github-hzg</id>
-            <url>https://maven.pkg.github.com/hzg-wpi/*</url>
+            <url>https://maven.pkg.github.com/hereon-wpi/*</url>
         </repository>
         <repository>
             <id>lib</id>
