Upgrade JTango; fix repo url

--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
     <properties>
         <tomcat.version>7.0.77</tomcat.version>
         <slf4j-api.version>1.7.5</slf4j-api.version>
-        <jtango.ver>1.0.5</jtango.ver>
-        <github.organization>hzg-wpi</github.organization>
+        <jtango.ver>1.0.6</jtango.ver>
+        <github.organization>hereon-wpi</github.organization>
         <github.repo>pre-experiment-data-collector</github.repo>
         <dockerhub.username>hzhereon</dockerhub.username>
         <dockerhub.repo>pre-experiment-data-collector</dockerhub.repo>
